# FFXIFriendList

./: .gitattributes  .gitignore  CMakeLists.txt  CONSTANTS_AUDIT_REPORT.md  FFXIFriendList.lua  Install-FFXIFriendList.bat  README.md  RELEASE_NOTES_v0.9.9.md  build.py  test_array_slicing.ps1
.github/workflows/: release.yml
app/: App.lua
app/diagnostics/: DiagnosticsRunner.lua
app/features/: Tags.lua  altvisibility.lua  blocklist.lua  characterVisibility.lua  connection.lua  friends.lua  notes.lua  notifications.lua  preferences.lua  serverlist.lua  themes.lua  versioncheck.lua  wsEventHandler.lua
app/ui/: FontManager.lua
common/: Bit.lua  LogLevel.lua
constants/: assets.lua  colors.lua  init.lua  limits.lua  ui.lua
controllers/: dualsense.lua  stadia.lua  switchpro.lua  xinput.lua
core/: Backoff.lua  NetworkConstants.lua  ServerConfig.lua  ServerProfiles.lua  TimingConstants.lua  UIConstants.lua  friendlist.lua  models.lua  moduleregistry.lua  nations.lua  notescore.lua  notificationsoundpolicy.lua  sanitize.lua  serverlistcore.lua  tagcore.lua  taggrouper.lua  util.lua  versioncore.lua
dev/: FONT_CAPABILITY_FINDINGS.md  font_capability_probe.lua
docs/: COMPATIBILITY_FIXES.md  DIAGNOSTICS.md
handlers/: controller_input.lua  input.lua
include/: PluginVersion.h  PluginVersion.h.in
libs/: icons.lua  net.lua  netwrapper.lua  packets.lua  persistence.lua  settings.lua  storage.lua  textures.lua  themehelper.lua
libs/nonBlockingRequests/: README.md  nonBlockingRequests.lua
modules/charactervisibility/: data.lua  display.lua  init.lua
modules/friendlist/: data.lua  display.lua  init.lua
modules/noteeditor/: data.lua  display.lua  init.lua
modules/notifications/: data.lua  display.lua  init.lua
modules/options/: data.lua  display.lua  init.lua
modules/presenceselector/: display.lua  init.lua
modules/quickonline/: data.lua  display.lua  init.lua
modules/serverselection/: data.lua  display.lua  init.lua
modules/themes/: data.lua  display.lua  init.lua
modules/visibilitymatrix/: data.lua  display.lua  init.lua
platform/: HttpTypes.lua
platform/assets/: PathUtils.lua
platform/input/: CommandHandler.lua  FriendListMenuDetector.lua  KeyEdgeDetector.lua
platform/persistence/: ApiKeyPersistence.lua  ServerSelectionPersistence.lua  ThemePersistence.lua
platform/services/: EventQueue.lua  Logger.lua  NetClient.lua  PreferencesStore.lua  RealmDetector.lua  ServerDetector.lua  ServerProfileFetcher.lua  SessionManager.lua  SoundPlayer.lua  UrlOpener.lua  WsClient.lua  WsClientAsync.lua  WsConnectionManager.lua
protocol/: ContractChecks.lua  DecodeRouter.lua  Endpoints.lua  Envelope.lua  Json.lua  MessageTypes.lua  ProtocolVersion.lua  WsEnvelope.lua  WsEventRouter.lua
protocol/Decoders/: AuthEnsure.lua  BlockedAccounts.lua  CharactersList.lua  FriendRequests.lua  FriendsList.lua  Heartbeat.lua  MeResponse.lua  Note.lua  NotesList.lua  Preferences.lua  ServerList.lua
protocol/Encoding/: HttpHeaders.lua  RequestEncoder.lua  UrlBuilder.lua
protocol/Json/: JsonErrors.lua
protocol/Validation/: FieldChecks.lua  MessageValidator.lua
scripts/: convert_sounds_to_wav.py  deploy_lua_addon.bat  deploy_lua_addon.py  generate_embedded.py
src/App/: NotificationConstants.h  NotificationSoundService.cpp  NotificationSoundService.h  ServerSelectionGate.h  SoundResolver.cpp  SoundResolver.h
src/Core/: FriendsCore.cpp  FriendsCore.h  MemoryStats.h  ModelsCore.cpp  ModelsCore.h  NotesCore.cpp  NotesCore.h  ServerListCore.h  UtilitiesCore.cpp  UtilitiesCore.h  VersionCore.cpp  VersionCore.h
src/Debug/: DebugLog.cpp  DebugLog.h  Perf.cpp  Perf.h
src/Protocol/: HttpHeaders.cpp  HttpHeaders.h  JsonUtils.cpp  JsonUtils.h  MessageTypes.cpp  MessageTypes.h  MessageValidator.cpp  MessageValidator.h  ProtocolVersion.cpp  ProtocolVersion.h  RequestEncoder.cpp  RequestEncoder.h  ResponseDecoder.cpp  ResponseDecoder.h
src/UI/: UiConstants.h
tests/: core_sanity.lua  main.cpp
tests/App/: AcceptFriendRequestUseCaseTest.cpp  CancelFriendRequestUseCaseTest.cpp  ConnectUseCaseTest.cpp  ConnectionStateTest.cpp  DeleteNoteUseCaseTest.cpp  FakeClock.h  FakeLogger.h  FakeNetClient.h  FakePreferencesStore.h  FakeRealmDetector.h  FakeSoundPlayer.h  GetAltVisibilityUseCaseTest.cpp  GetFriendRequestsUseCaseTest.cpp  GetNotesUseCaseTest.cpp  NotificationSoundServiceTest.cpp  NotificationUseCaseTest.cpp  PreferencesUseCaseTest.cpp  RealmDetectorTest.cpp  RefreshBehaviorTest.cpp  RejectFriendRequestUseCaseTest.cpp  RemoveFriendUseCaseTest.cpp  RemoveFriendVisibilityUseCaseTest.cpp  SaveNoteUseCaseTest.cpp  SendFriendRequestUseCaseTest.cpp  SoundResolverTest.cpp  SyncFriendListUseCaseTest.cpp  ThemeState.h  ThemeUseCaseTest.cpp  UpdateMyStatusUseCaseTest.cpp  UpdatePresenceUseCaseTest.cpp  UrlConstructionTest.cpp
tests/Core/: FriendListDifferTest.cpp  FriendListFilterTest.cpp  FriendListSorterTest.cpp  FriendListTest.cpp  FriendStatusTest.cpp  FriendTest.cpp  MailTest.cpp  MemoryStatsTest.cpp  NoteMergerTest.cpp  NotificationSoundPolicyTest.cpp  PreferencesTest.cpp  PresenceTest.cpp  SanitizeTest.cpp  ThemeTest.cpp  VersionTest.cpp
tests/Debug/: DebugLogTest.cpp
tests/Platform/: CommandHandlerHookTest.cpp  CommandParsingTest.cpp  EchoMessagesTest.cpp  FakeChatManager.h  KeyEdgeDetectorTest.cpp  PollingCadenceTest.cpp
tests/Protocol/: HttpHeadersTest.cpp  JsonUtilsTest.cpp  MalformedInputTest.cpp  MessageTypesTest.cpp  MessageValidatorTest.cpp  ProtocolVersionTest.cpp  RequestEncoderTest.cpp  ResponseDecoderTest.cpp
tests/UI/: AltVisibilityViewModelTest.cpp  FriendListViewModelTest.cpp  FriendListWindowTest.cpp  NotesViewModelTest.cpp  OptionsViewModelTest.cpp  ThemesViewModelTest.cpp  WindowClosePolicyTest.cpp
tests/app/: BackoffTest.lua  BlocklistTest.lua  CharacterVisibilityTest.lua  ConnectionTest.lua  FriendsNotificationsTest.lua  FriendsTest.lua  NetTest.lua  NotesTest.lua  TagsTest.lua  WsClientAsyncTest.lua  WsConnectionManagerTest.lua  WsEventHandlerTest.lua  WsReconnectResyncTest.lua  run_all_tests.lua
ui/: close_gating.lua  window_close_policy.lua
(+202 files in other folders)
